tests/NormalTests/paczka1/fuzzy1/16143377.err
Error in line 1: qOMTy S647 33,2
Error in line 6: qOMTy A100 74,5
Error in line 5: 7NCkj0 A881 95,6
Error in line 26: Y1yyBBub A``1 1,6
Error in line 21: 7NCkj0 S647 46,3
Error in line 28: Y1yyBBub A881 4,2
Error in line 31: Y1yyBBub S647 80,1
